api create routing key
